fix: overflow-x

--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -4,6 +4,7 @@
   
 html
   background: $color-white
+  overflow-x: hidden
 
 .subtitle
   margin-bottom: 1rem
@@ -26,6 +27,7 @@ html
   height: 100%
   width: 100%
   min-height: 100vh
+  overflow-x: hidden
 
 header
   position: fixed
